--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "grunt-recess": "~0.5.0",
       "grunt-ts": "^1.8.2",
       "jasmine-expect": "~1.21.0",
-      "jasmine-jquery": "~1.3.3",
+      "jasmine-jquery": "~2.0.5",
       "karma": "^0.12.1",
       "karma-chrome-launcher": "^0.1.2",
       "karma-coverage": "^0.2.1",
@@ -58,11 +58,8 @@
       "url": "http://www.opensource.org/licenses/mit-license.php"
     }
   ],
-  "repositories": [
-    {
-      "type": "git",
-      "url": "http://github.com/abdavid/jslider.git"
-    }
-  ],
-  "github": "http://github.com/abdavid/jslider"
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/abdavid/jslider.git"
+  }
 }
